--- a/Untitled.html
+++ b/Untitled.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JOSDAM LANDING-PAGE</title>
 <link rel="stylesheet"
-href="css/style.css">
+href="style.css">
 </head>
 <body>
     
@@ -18,7 +18,7 @@ href="css/style.css">
 
 <h2>What is your focus for today</h2>
 <h2 id="focus" contenteditable="true">Make Cool video</h2>
-<script src="storage/emulated/0/Alarms/startbootstrap-personal-gh-pages/Hackathon/dynamicbrad/js/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
 
